--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alexander Pace | Web Developer</title>
+    <title>Alexander Pace</title>
     <link rel="stylesheet" href="css/styles.css">
     <script async src="https://unpkg.com/three@0.132.2/build/three.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
