Small Changes Tweaks And Mobile View

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <section class="skills section-padding" id="skills">
             <h2 class="section-title animate-scroll">Technical Arsenal</h2>
-            <h4 class="skill-instruction">(Hover Over To Flip)</h4>
+            <h4 class="skill-instruction">(Hover Over/Click To Flip)</h4>
             <div class="skills-grid">
                 <!-- Skill cards remain unchanged from original -->
                 <div class="skill-card" data-skill="html">
