About Section and Profile Picture

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="terminal-overlay" aria-hidden="true"></div>
 
     <main class="content-container">
-        <section class="hero section-padding">
+        <section class="hero section-padding">        
             <div class="gradient-text-animation">
                 <h1 class="hero-title">
                     <span data-text="Alexander">Alexander</span>
@@ -40,10 +40,15 @@
 
                 <div class="cyber-line social-line" style="top: calc(100% + 5rem);"></div>
             </div>
+
+            <div class="profile-image-container">
+                <img src="pictures/ProfilePic.jpg"Alexander Pace" class="cyber-profile-image">
+                <div class="image-hover-glow"></div>
+            </div>
         </section>
 
         <section class="skills section-padding" id="skills">
-            <h2 class="section-title animate-scroll">Technical Arsenal</h2>
+            <h2 class="section-title animate-scroll">Personal Skills</h2>
             <h4 class="skill-instruction">(Hover Over/Click To Flip)</h4>
             <div class="skills-grid">
                 <!-- Skill cards remain unchanged from original -->
@@ -128,6 +133,42 @@
                 <h3 class="cert-title">Web Development Certificate</h3>
                 <p class="cert-issuer">Certificate with <a href="https://www.spcollege.edu/">St. Petersburg College</a></p>
                 <div class="cert-date">2023</div>
+            </div>
+        </section>
+
+        <!-- Add this section below the Skills section -->
+        <section class="about section-padding" id="about">
+            <h2 class="section-title animate-scroll">About Me</h2>
+            <div class="about-content animate-scroll">
+                <div class="cyber-bio">
+                    <div class="neon-divider"></div>
+                    <p class="cyber-text-glitch">// UI/UX Designer // Web Development Specialist // Web Project Manager //</p>
+                    <div class="neon-divider"></div>
+                    
+                    <p class="cyber-description">
+                        <span class="neon-accent">>></span> I’m currently 19 years old, living in Pinellas County, and actively seeking a career in web development. 
+                        I’m eager to apply my growing skills in HTML, CSS, and JavaScript to real-world projects while continuing to learn and adapt in this fast-evolving field.
+                    </p>
+                    
+                    <p class="cyber-description">
+                        <span class="neon-accent">>></span> I am a aspiring web developer with a focus on creating sleek, user-friendly websites. Im Always learning and
+                        always building-ready to bring fresh ideas and energy to every project.
+                    </p>
+
+                    <p class="cyber-description">
+                        <span class="neon-accent">>></span> I’m a dedicated and hardworking individual who approaches every challenge with determination and a willingness to learn. 
+                        I thrive in environments where I can grow my skills, take on new responsibilities, and continuously improve to deliver my best work. 
+                    </p>
+
+                    <div class="tech-stack">
+                        <span class="stack-item">React</span>
+                        <span class="stack-item">TypeScript</span>
+                        <span class="stack-item">Html</span>
+                        <span class="stack-item">CSS</span>
+                        <span class="stack-item">JavaScript</span>
+                        <span class="stack-item">Python</span>
+                    </div>
+                </div>
             </div>
         </section>
 
