--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <p class="skill-desc">Modern Layouts</p>
                         <div class="skill-progress" style="--skill-level: 95%"></div>
                         <br>
-                        <p>- 3+ Years Experience</p>
+                        <p>- 3+ Years Experience </p>
                         <p>- Very Comfortable</p>
                         <p>(Best Skill/Most Used)</p>
                     </div>
@@ -111,6 +111,22 @@
                     </div>
                 </div>
 
+                <div class="skill-card" data-skill="python">
+                    <div class="card-front">
+                        <div class="skill-icon">DV</div>
+                        <h3 class="skill-name">Data Visualization</h3>
+                    </div>
+                    <div class="card-back">
+                        <p class="skill-desc">Visual Data Graphs</p>
+                        <div class="skill-progress" style="--skill-level: 65%"></div>
+                        <br>
+                        <p>- 1+ Year Experience</p>
+                        <p>(Data Visualization With Python)</p>
+                        <p>- Learning More</p>
+                        <p>(Comfortable)</p>
+                    </div>
+                </div>
+
                 <div class="skill-card" data-skill="react">
                     <div class="card-front">
                         <div class="skill-icon">⚛</div>
@@ -121,6 +137,7 @@
                         <div class="skill-progress" style="--skill-level: 50%"></div>
                         <br>
                         <p>- 1 Year Experience</p>
+                        <p>Multiple React Projects</p>
                         <p>(Learning More)</p>
                     </div>
                 </div>
@@ -161,12 +178,15 @@
                     </p>
 
                     <div class="tech-stack">
-                        <span class="stack-item">React</span>
-                        <span class="stack-item">TypeScript</span>
                         <span class="stack-item">Html</span>
                         <span class="stack-item">CSS</span>
                         <span class="stack-item">JavaScript</span>
                         <span class="stack-item">Python</span>
+                        <span class="stack-item">React</span>
+                        <span class="stack-item">TypeScript</span>
+                        <span class="stack-item">Data Visualization With Python</span>
+                        <span class="stack-item">Project Management</span>
+                        <span class="stack-item">Quick learner</span>
                     </div>
                 </div>
             </div>
@@ -174,7 +194,7 @@
 
         <section class="contact section-padding" id="contact">
             <div class="contact-cta animate-scroll">
-                <h2 class="cta-title">Initiate Connection</h2>
+                <h2 class="cta-title">Contact Now</h2>
                 <form id="contactForm" class="cyber-form">
                     <div class="input-group">
                         <input 
@@ -200,7 +220,7 @@
                         <div class="error-message" id="messageError"></div>
                     </div>
                     <button class="cyber-button" type="submit" id="submitBtn">
-                        <span class="cyber-text">INITIATE TRANSMISSION</span>
+                        <span class="cyber-text">SEND MESSAGE</span>
                         <span class="glitch-layer"></span>
                         <span class="scanline"></span>
                         <div class="progress-bar"></div>
