Project section work reference work

--- a/index.html
+++ b/index.html
@@ -144,6 +144,23 @@
             </div>
         </section>
 
+        <section class="projects section-padding" id="projects">
+            <h2 class="section-title animate-scroll">Projects</h2>
+            <p class="section-description">A selection of recent work that reflects my skills in web development and design.</p>
+            
+            <div class="projects-grid animate-scroll">
+                <a href="https://junepoint.com" target="_blank" rel="noopener" class="project-card">
+                    <img src="pictures/junepoint-preview.jpg" alt="JunePoint Website Preview" class="project-image">
+                    <h3 class="project-title">JunePoint.com</h3>
+                </a>
+
+                <a href="https://jpacontractors.com/" target="_blank" rel="noopener" class="project-card">
+                    <img src="pictures/jpa-preview.jpg" alt="JPA Contractors Website Preview" class="project-image">
+                    <h3 class="project-title">JPA Contractors</h3>
+                </a>
+            </div>
+        </section>
+
         <section class="certificates section-padding" id="certificates">
             <h2 class="section-title animate-scroll">Credentials</h2>
             <div class="cert-card animate-scroll">
@@ -158,7 +175,6 @@
             </div>
         </section>
 
-        <!-- Add this section below the Skills section -->
         <section class="about section-padding" id="about">
             <h2 class="section-title animate-scroll">About Me</h2>
             <div class="about-content animate-scroll">
