--- a/index.html
+++ b/index.html
@@ -260,5 +260,26 @@
 
     <script src="js/three-config.js" defer></script>
     <script src="js/main.js" defer></script>
+    <script>
+document.addEventListener('DOMContentLoaded', function() {
+  document.querySelectorAll('.project-image, .cert-image, .cyber-profile-image').forEach(function(img) {
+    img.onerror = function() {
+      // Use a local fallback image
+      if (this.src.indexOf('fallback.jpg') === -1) {
+        this.src = 'pictures/fallback.jpg';
+        this.alt = 'Image not found';
+        this.style.background = '#222';
+      } else {
+        // If fallback also fails, hide the image
+        this.style.display = 'none';
+      }
+    };
+    // Check if image is loaded
+    if (!img.complete || img.naturalWidth === 0) {
+      img.onerror();
+    }
+  });
+});
+</script>
 </body>
 </html>
